ops/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: knote-app
spec:
  selector:
    app: knote-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
