ops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knote-app-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: knote-snakierboss.app
    cert-manager.io/acme-challenge-type: "http01"
    cert-manager.io/cluster-issuer: "letsencrypt-snakier"
spec:
  ingressClassName: nginx
  rules:
    - host: knote-snakierboss.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: knote-app
                port:
                  number: 8080
  tls:
    - hosts:
        -  knote-snakierboss.app
      secretName: snakierboss.app-tls
